--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
+  <link href="style/main.css" rel="stylesheet">
+  <link href="style/carousel.css" rel="stylesheet">
+  <link href="style/bubble.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <title>Buy your side</title>
 
@@ -15,9 +17,7 @@
 <body>
 
   <nav class="navigation">
-    <a href="/">
-      <img class="main-logo" alt="logo" src="images/Logo_BYS_couleur.png" />
-    </a>
+    <img class="main-logo" alt="logo" src="images/Logo_BYS_couleur.png" />
     <ul>
       <li><a href="#home">Accueil</a></li>
       <li><a href="#reviews">Témoignages</a></li>
@@ -28,56 +28,61 @@
     </ul>
   </nav>
 
-  <div id="home">
-    <div class="content">
+  <section class="home">
+    <div class="section-header home-header">
+      <span id="home" class="anchor"></span>
       <h2>Pourquoi faire appel à moi</h2>
-      <ul>
-        <li>Le marché immobilier est toujours très tendu et les candidats à l’achat ont moins de temps pour se décider
-          sur
-          un bien à plusieurs centaines de milliers d’euros que pour l’achat d’une simple paire de chaussures (qui peut
-          elle être essayée…).</li>
-
-        <li>Le métier d’un agent immobilier est de vendre le bien de son client pas de vous conseiller en tant
-          qu’acheteur.</li>
-
-        <li>Chercher sérieusement un bien prend énormément de temps, si vous travaillez et que vous avez en plus une
-          famille
-          à gérer, vous dégager du temps est un exploit. Si vous êtes retraité hyper actif, vous n’avez pas plus de
-          temps
-          non plus !</li>
-
-        <li>Si un bien est exceptionnel ou s’il est affiché à un prix correct, seuls les tous premiers à réagir pourront
-          le
-          visiter et faire une offre.</li>
-
-        <li>Si vous vous être inscrit dans un listing d’agence immobilière, vous recevez plein d’offres de leur part
-          mais
-          jamais qui correspond à ce que vous leur avez pourtant demandé.</li>
-
-        <li>Vous vous êtes déjà laissé séduire par une photo pour réaliser sur place que la luminosité sur les photos
-          était
-          due à un filtre et que les fenêtres donnent sur une cour sinistre… Où bien que l’immeuble était superbe comme
-          sur les photos mais que l’annonce ne précisait pas qu’il était entouré de grandes barres de logements
-          couvertes
-          de tags…</li>
-
-        <li>Que ce soit pour investir ou habiter, vous faire accompagner dans la recherche et l’acquisition de votre
-          futur
-          bien vous évitera du stress, vous ouvrira des opportunités et surtout vous économisera un temps précieux.</li>
-
-        <li>Je vous apporte ma réactivité, mon expérience, j’amène du rationnel et de la prise de recul dans votre
-          décision
-          d’achat. Je vous aide à vous projeter et à évaluer le potentiel d’un bien. J’enquête ensuite pour vous
-          apporter
-          le maximum d’informations en vue de conforter votre décision finale.</li>
-
-
-      </ul>
     </div>
-  </div>
+    <div class="home-content">
+      <div class="thoughts">
+        <div class="thought">Les acquereurs d’un bien immobilier ont moins de temps pour se décider que pour l’achat
+          d’une simple paire de chaussures …
+        </div>
+        <div class="thought">Vous vous êtes déjà laissé séduire par une photo ou un descriptive pour réaliser sur place
+          que la réalité était toute autre…
+        </div>
+        <div class="thought">Si vous vous être inscrit dans un listing d’agence immobilière, vous recevez plein d’offres
+          de leur part mais jamais qui correspond à ce que vous leur avez pourtant demandé.
+        </div>
+        <div class="thought">Un bien exceptionnel ou simplement affiché à un prix correct, sera vendu à l’un des 3
+          premiers à réagir.</div>
+        <div class="thought">Chercher sérieusement un bien prend énormément de temps, si vous travaillez et que vous
+          avez en plus une famille à gérer, vous dégager du temps est un exploit !
+        </div>
+        <div class="thought">Le métier d’un agent immobilier est de vendre le bien de son client pas de vous conseiller
+          en tant qu’acheteur !
+        </div>
 
-  <div id="reviews">
-    <h2>Témoignages clients</h2>
+      </div>
+      <div class="bubbles">
+        <div class="bubble-container">
+          <img alt="bouée" src="icons/bouee-de-sauvetage.png" />
+          <div class="bubble">Que ce soit pour investir ou habiter, je vous accompagne dans la recherche et
+            l’acquisition
+            de votre futur bien. Vous évitez du stress, vous accédez à des opportunités et surtout vous économisez un
+            temps précieux.
+          </div>
+
+        </div>
+        <div class="bubble-container">
+          <img alt="bouée" src="icons/phare.png" />
+          <div class="bubble">Je vous apporte ma réactivité, mon expérience, j’amène du rationnel et de la prise de
+            recul
+            dans votre décision d’achat. Je vous aide à vous projeter et à évaluer le potentiel d’un bien. J’enquête
+            ensuite pour vous apporter le maximum d’informations en vue de conforter votre décision finale.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="section-header reviews-header">
+      <span id="reviews" class="anchor"></span>
+      <div class="reviews-header__picture">
+      </div>
+      <h2>Témoignages clients</h2>
+    </div>
     <div class="carousel">
       <div class="chevron-container chevron-container-left disabled">
         <img alt="chevron-left" src="icons/chevron_left.svg" class="chevron chevron-left" />
@@ -87,56 +92,85 @@
         <img alt="chevron-right" src="icons/chevron_right.svg" class="chevron chevron-right" />
       </div>
     </div>
-  </div>
+  </section>
 
-    <div id="commitments">
+  <section class="commitments">
+    <div class="section-header commitments-header">
+      <span id="commitments" class="anchor"></span>
       <h2>Mes engagements</h2>
-      <ul>
-        <li>Je fais passer vos intérêts avant les miens, plutôt qu’un résultat court terme je préfère votre satisfaction
-          finale. Mes clients sont ma meilleur publicité.</li>
-        <li>Je suis 100% indépendante : je ne suis affiliée à aucun réseau je n’ai dons pas intérêt à privilégier une
-          agence plutôt qu’une autre, si je vous recommande un prestataire c’est parce que je le connais, je ne demande
-          aucune contrepartie. </li>
-        <li>Je m’adapte au maximum à vos contraintes et je en vous présente que des biens qui correspondent à vos
-          critères.</li>
-        <li>Je me limite à 3 clients maximum, je privilégie un accompagnement personnalisé et une grande disponibilité.
-        </li>
-        <li>Mes tarifs sont transparents, je ne suis rémunérée que lors de la signature finale comme l’exige la loi
-          Hoguet, j’ai une carte d’agent immobilier, une assurance responsabilité civile. Mes contrats ne sont pas
-          tacitement reconductibles : je veux établir une relation de confiance pas piéger mes clients</li>
-        <li>Je respecte le délai de rétractation de 14 jours après la signature prévu par la loi : vous êtes libres de
-          changer d’avis</li>
-
-      </ul>
     </div>
+    <div class="commitments-container">
+      <div class="commitment">
+        <p>Votre satisfaction finale est mon seul but. Mes clients sont ma meilleure et ma seule publicité.
+        </p>
+        <img alt="icon" src="icons/avis-positif.png" />
+      </div>
+      <div class="commitment">
+        <p>Je suis 100% indépendante : je ne suis affiliée à aucun réseau je n’ai donc pas intérêt à privilégier une agence plutôt qu’une autre. 
+        </p>
+        <img alt="icon" src="icons/liberte.png" />
+      </div>
+      <div class="commitment">
+        <p>Je m’adapte au maximum à vos contraintes et je ne vous présente que des biens qui correspondent vraiment à vos critères
+        </p>
+        <img alt="icon" src="icons/liste-de-controle.png" />
+      </div>
+      <div class="commitment">
+        <p>Je me limite à 3 clients à la fois, je privilégie un accompagnement personnalisé et une grande disponibilité.
+        </p>
+        <img alt="icon" src="icons/trois-doigts.png" />
+      </div>
+      <div class="commitment">
+        <img alt="icon" src="icons/document-legal.png" />
+        <p>Mes tarifs sont transparents, je ne suis rémunérée que lors de la signature finale comme l’exige la loi Hoguet, j’ai une carte d’agent immobilier et une assurance responsabilité civile.
+        </p>
+      </div>
+      <div class="commitment">
+        <img alt="icon" src="icons/main-dans-la-main.png" />
+        <p>Mes contrats ne sont pas tacitement reconductibles : je veux établir une relation de confiance, pas piéger mes clients
+        </p>
+      </div>
+    </div>
+  </section>
 
-    <div id="steps">
+  <section class="steps">
+    <div class="section-header steps-header">
+      <span id="steps" class="anchor"></span>
+      <div class="steps-header__picture">
+      </div>
       <h2>Les étaps de l'accompagnement</h2>
     </div>
+  </section>
 
-    <div id="pricing">
+  <section class="pricing">
+    <div class="section-header">
+      <span id="pricing" class="anchor"></span>
       <h2>Mes tarifs</h2>
     </div>
+  </section>
 
-    <div id="who">
+  <section class="who">
+    <div class="section-header">
+      <span id="who" class="anchor"></span>
       <h2>Qui suis-je ?</h2>
-      <p>Ancienne avocate spécialisée en fiscalité passée ensuite par les directions RH de grands groupes, j’ai
-        transformé
-        un accident de parcours en opportunité de changer de vie pour me lancer dans un univers qui m’a toujours attirée
-        :
-        l’immobilier.
-        Ce domaine est vaste et tous les métiers ne me faisaient pas rêver mais j’avais depuis longtemps en tête d’avoir
-        un rôle d’accompagnatrice à l’achat.
-        En aidant tout d’abord des amis, j’ai pu réaliser comme les acquéreurs ont besoin d’être rassurés et comme ils
-        peuvent être désarmés face aux arguments des agents immobiliers. Je pouvais apporter une réelle plus-value.
-        C’est donc tout naturellement que j’ai décidé de me spécialiser dans la recherche et l’accompagnement à l’achat
-        de
-        biens immobiliers.
-        Mes expériences personnelles en investissement et en rénovation, mon sens du contact, mes connaissances en droit
-        et mon énergie sont mes cartes maitresses pour réussir au mieux ma mission.
-        Rencontrons nous !
-      </p>
     </div>
+    <p>Ancienne avocate spécialisée en fiscalité passée ensuite par les directions RH de grands groupes, j’ai
+      transformé
+      un accident de parcours en opportunité de changer de vie pour me lancer dans un univers qui m’a toujours attirée
+      :
+      l’immobilier.
+      Ce domaine est vaste et tous les métiers ne me faisaient pas rêver mais j’avais depuis longtemps en tête d’avoir
+      un rôle d’accompagnatrice à l’achat.
+      En aidant tout d’abord des amis, j’ai pu réaliser comme les acquéreurs ont besoin d’être rassurés et comme ils
+      peuvent être désarmés face aux arguments des agents immobiliers. Je pouvais apporter une réelle plus-value.
+      C’est donc tout naturellement que j’ai décidé de me spécialiser dans la recherche et l’accompagnement à l’achat
+      de
+      biens immobiliers.
+      Mes expériences personnelles en investissement et en rénovation, mon sens du contact, mes connaissances en droit
+      et mon énergie sont mes cartes maitresses pour réussir au mieux ma mission.
+      Rencontrons nous !
+    </p>
+  </section>
 </body>
 
 </html>
