--- a/index.html
+++ b/index.html
@@ -171,6 +171,30 @@
       Rencontrons nous !
     </p>
   </section>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDgc0wUtaDZB7GRcFhNU-BS1pEk3ysK5dk",
+      authDomain: "buy-your-side.firebaseapp.com",
+      projectId: "buy-your-side",
+      storageBucket: "buy-your-side.appspot.com",
+      messagingSenderId: "759158414918",
+      appId: "1:759158414918:web:e41202b8b87b8691783447",
+      measurementId: "G-EZ0NESS37K"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 
 </html>
