--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
   <link href="style/main.css" rel="stylesheet">
   <link href="style/carousel.css" rel="stylesheet">
   <link href="style/bubble.css" rel="stylesheet">
+  <link href="style/mobile.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <title>Buy your side</title>
 
-  <script type="text/javascript" src="reviews.js"></script>
+  <script type="text/javascript" src="js/reviews.js"></script>
+  <script type="text/javascript" src="js/sidenav.js"></script>
 </head>
 
 <body>
 
   <nav class="navigation">
+    <a class="open-sidenav" href="javascript:void(0)" onclick="openNav()">
+      <img class="burger-menu" alt="menu" src="icons/menu.svg" />
+    </a>
     <img class="main-logo" alt="logo" src="images/Logo_BYS_couleur.png" />
-    <ul>
+    <ul class="nav">
       <li><a href="#home">Accueil</a></li>
       <li><a href="#reviews">Témoignages</a></li>
       <li><a href="#commitments">Mes engagements</a></li>
@@ -26,7 +31,19 @@
       <!-- <li><a href="#pricing">Tarifs</a></li> -->
       <li><a href="#who">Qui suis-je ?</a></li>
     </ul>
+    <div class="mobile-placeholder"></div>
   </nav>
+
+  <div class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times
+      <a href="#home" onclick="closeNav()">Accueil</a>
+      <a href="#reviews" onclick="closeNav()">Témoignages</a>
+      <a href="#commitments" onclick="closeNav()">Mes engagements</a>
+      <a href="#steps" onclick="closeNav()">Les étapes</a>
+      <!-- <li><a href="#pricing">Tarifs</a></li> -->
+      <a href="#who" onclick="closeNav()">Qui suis-je ?</a>
+  </div>
+
 
   <section class="home">
     <div class="section-header home-header">
@@ -145,48 +162,48 @@
       <h2 class="section-title">Les étaps de l'accompagnement</h2>
     </div>
     <div class="steps-container">
-      <p>Définition du bien recherché : Je vous rencontre dans votre logement actuel pour faire connaissance, voir dans
+      <p><strong>Définition du bien recherché :</strong> Je vous rencontre dans votre logement actuel pour faire connaissance, voir dans
         quel univers vous vivez, ce que vous y aimez, ce que vous aimeriez changer etc… Nous établissons ensemble une
         définition détaillée du bien de vos rêves avec des critères impératifs et des critères optionnels. Je vous
         alerte en cas de critères incompatibles ou de souhaits éloignés de la réalité du marché.
       </p>
-      <p>Présentation de logements : Je vous propose de visiter des biens qui correspondent VRAIMENT à vos critères en
+      <p><strong>Présentation de logements :</strong> Je vous propose de visiter des biens qui correspondent VRAIMENT à vos critères en
         vérifiant les éléments mentionnés dans l’annonce et en posant les questions complémentaires en amont. Je tiens
         également à jour une liste de biens qui paraissaient parfaits sur le papier avec la raison de leur élimination.
         Je vous laisse bien entendu un accès libre à cette base.
       </p>
-      <p>Visite du logement : je vous accompagne évidemment pour chaque visite, je vous laisse vous faire une impression
+      <p><strong>Visite du logement :</strong> je vous accompagne évidemment pour chaque visite, je vous laisse vous faire une impression
         générale sur le bien (appréciation des volumes, de la luminosité, sentiment de bien être etc…). Je me concentre
         sur des aspects plus techniques : orientation réelle, parcours du soleil dans la pièce principale, épaisseur des
         doubles vitrages, hauteur sous plafond, traces de dégâts des eaux, présence de fissures, état apparent de la
         chaudière, possibilité de modification des cloisons, questions sur les travaux déjà réalisés etc… </p>
-      <p>Debrief suite à chaque visite : nous faisons le point sur les aspects positifs et négatifs, je vous partage les
+      <p><strong>Debrief suite à chaque visite :</strong> nous faisons le point sur les aspects positifs et négatifs, je vous partage les
         points techniques que j’aurais relevés et vous décidez de la suite à donner
       </p>
-      <p>Analyse des documents fournis après la visite : si vous êtes intéressés par le bien je vous fais un compte
+      <p><strong>Analyse des documents fournis après la visite :</strong> si vous êtes intéressés par le bien je vous fais un compte
         rendu des différents diagnostiques techniques obligatoires, des comptes rendus d’AG (bonne tenue de la
         copropriété, travaux envisagés, problèmes soulevés lors de AG, opportunités financières relevées (ex : un des
         copropriétaires souhaite racheter des parties communes etc…).
       </p>
-      <p>Offre d’achat : je vous présente une analyse poussée du prix bien à acheter à partir de différentes bases de
+      <p><strong>Offre d’achat :</strong> je vous présente une analyse poussée du prix bien à acheter à partir de différentes bases de
         données du marché pour vous recommander un prix raisonnable à indiquer dans l’offre, vous décidez ensuite. Je
         vous prépare le modèle d’offre d’achat que vous signez.
       </p>
-      <p>Vérification des éléments extérieurs au bien : je vérifie si des projets qui pourraient nuire à votre
+      <p><strong>Vérification des éléments extérieurs au bien :</strong> je vérifie si des projets qui pourraient nuire à votre
         tranquillité ou à la valeur du bien sont en cours (percement d’une nouvelle ligne de métro sous la rue, permis
         de surélévation accordé à l’immeuble d’en face etc…), je cherche si des appartements de l’immeuble sont loués à
         des touristes, je consulte les comptes rendus des visites de quartier s’ils existent, je vérifie la présence
         d’entreprises qui pourraient être source de nuisance etc... J’essaye d’obtenir le maximum d’informations pour
         que vous sachiez où vous mettez les pieds.
       </p>
-      <p>Signature de l’avant contrat (compromis ou promesse de vente) : lorsque l’offre est acceptée, je relis le
+      <p><strong>Signature de l’avant contrat (compromis ou promesse de vente) :</strong> lorsque l’offre est acceptée, je relis le
         projet d’avant contrat pour vérifier qu’il reprend bien les termes de l’offre acceptée et je me tiens à votre
         disposition pour vous expliquer tout point qui ne vous paraitrait pas clair (sans limitation, il y a tellement
         de termes obscurs dans un avant contrat…). Je vous accompagne au rendez-vous.
       </p>
-      <p>Signature définitive : Je fais la contre visite précédant la signature à vos côtés et là encore je relis le
+      <p><strong>Signature définitive :</strong> Je fais la contre visite précédant la signature à vos côtés et là encore je relis le
         projet, je réponds à vos questions et je vous accompagne à la signature. </p>
-      <p>Ouverture du champagne : vous n’aurez plus besoin de mon aide à cette étape !
+      <p><strong>Ouverture du champagne :</strong> vous n’aurez plus besoin de mon aide à cette étape !
       </p>
     </div>
   </section>
